--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
+name: Cristian Vitorin
+title: Lic. Negocios Internacionales
+email: 200300033@ucaribe.edu.mx
 website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
