--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Cristian Vitorin
 title: Lic. Negocios Internacionales
 email: 200300033@ucaribe.edu.mx
-website: www.github.com/sproogen/resume-theme
+website: https://vitorinlogistics.rocks/
 
 # Dark Mode (true/false/never)
 darkmode: false
@@ -21,7 +21,7 @@ github_username:  sproogen
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
+instagram_username: vitorin66
 linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
@@ -45,10 +45,10 @@ additional_links:
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: About Me
+# about_title: Acerca de mí
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hola mi nombre es cristian tengo 20 años,soy estudiante de la licenciatura en negocios internacionales. 
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
