--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ twitter_username: facespics
 github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-# facebook_username: jekyll
+# facebook_username: cristian vitorin
 # flickr_username: jekyll
 instagram_username: vitorin66
 linkedin_username: jameswgrant
@@ -45,20 +45,20 @@ additional_links:
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: Acerca de mí
+# about_title:"Acerca de mí"
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hola mi nombre es cristian tengo 20 años,soy estudiante de la licenciatura en negocios internacionales. 
+  Hola mi nombre es cristian Rangel tengo 20 años, soy estudiante de la licenciatura en negocios internacionales. 
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  Lo que más disfruto es viajar, trabajar y conocer nuevos países. 
 
 content:
-  - title: Projects # Title for the section
+  - title: TRAYECTORIA ACADÉMICA# Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
-        link: github.com/sproogen
+        title: Instituciones educativas que me han formado academicamente.
+        link: https://www.unicaribe.mx/
         # link_text: Project Website
         additional_links:
           - title:  sproogen/modern-resume-theme
@@ -68,46 +68,56 @@ content:
           #   icon: fab fa-github
           #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         quote: >
-          This is probably one of the greatest apps ever created, if you don't agree you're probably wrong.
+          -
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+          Escuela secundaria. Año 2014-2017. "Pilar Victoria Y Victoria" Peto Yucatán.
+          Escuela media Superior. Año 2017-2020. "Colegio de Bachilleres del Estado de Yucatán" Peto Yuactán.
+          Desde el año 2020 comecé mis estudios en la universidad del caribe, ubicado en la ciudad de cancun Quintana Roo. 
+          Actualmente me encuentro cursando el cuarto semestre en la licenciarura en negocios internacionales.
 
-  - title: Experience # Title for the section
+  - title: Experiencia # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        title: Fiesta inn Cancún Las Americas.
+        link:  https://www.fiestainn.com/
+        # link_text: https://www.fiestainn.com/
+        sub_title: Asistente de Administracion
+        caption: Diciembre 2021
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          Fiesta inn es una empresa dedicada al sector hotelero, cada año hospeda a mas de 100,000 huespedes.
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            La empresa me capacitó para tener conocimiento en la administracion de una empresa del sector hotelero.
+            Tengo experiencia realizando Balances, libros contables, presupuesto anual, entre muchas otras cosas.
+            Tengo una capacitacion en Administracion y contabilidad. Acreditada  por la secretaria de educacion publica.
+            Desde a muy temprana edad comencé con proyectos emprendedores por lo que me considero una persona capacitada para desemvolverme y realizar negociaciones.
+           
+            
 
-  - title: Education # Title for the section
+  - title: EDUCACIÓN # Title for the section
     layout: list # Type of content section (list/text)
-    content:
+    content: 
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        title: UNIVERSIDAD DEL CARIBE
+        caption: 2020- PRESENTE
+        sub_title: Lic. Negocios Internacionales.
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+          Alma mater.
+ 
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          Actualmente me encuentro cursando el cuaro semestre en la licenciatura de negocios internacionales.
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+          Esta universidad ofrece grandes herramientas para formar alumnos altamente capacitados para que pueden desempeñar sus funciones en cualquier sector del turismo y de los negocios.
+          
 
-  - title: A Little More About Me
+  - title: UN POCO MÁS SOBRE MI
     layout: text
     content: | # this will include new lines to allow paragraphs
       Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      - Lector apacionado
+      - Conocimientos en edición y marketing
+      - Amigable
+      - Amante de los viajes
 
       Look at this cool image  
       ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
